:bookmark: Finalizando header

--- a/components/location.html
+++ b/components/location.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -13,13 +13,11 @@
 
     <link rel="stylesheet" href="/style/style.css">
 
-
-    <title>Brackets - Ranking </title>
-
-    
+    <title>Localidades</title>
 </head>
 
 <body>
+
 <header class="border sticky-top head">
     <div class="container ">
 
@@ -187,137 +185,70 @@
     </div>
 </header>
 
-
-    </div>
-</header>
-
-    <section class="bg-ranking">
-
-    <div class="container ">
+    <div class="container">
         <div class="row">
-            <h2 class="mt-5">
-                Viajantes 
-            </h2>
-            <div class="row">
-                <div class="col-1">
-                    Posição
-                </div>
-                <div class="col-9">
-                    Usuário
-                </div>
-                <div class="col-2 text-end">
-                    Contribuições
-                </div>
+            <div class="col">
+                <h5 class="orange">CONHEÇA ALGUNS LUGARES INCRÍVEIS </h5>
             </div>
-
-            <div class="row mt-3 car point">
-                <div class="col-1 back  text-center">
-                    <h1>1</h1>
-                </div>
-
-                <div class="col-9 back point">
-                    <div class="row">
-                        <div class="col-2">
-                            <img src="/img/perfilfundo.png" alt="">
-                        </div>
-
-                        <div class="col">
-                            <h6>Gustavo Mendes</h6>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-2 text-end back point">
-                    <p>
-                        48230
-                    </p> 
-                </div>
-            </div>
-
-            <div class="row mt-3 car point">
-                <div class="col-1 back  text-center">
-                    <h1>2</h1>
-                </div>
-            
-                <div class="col-9 back point">
-                    <div class="row">
-                        <div class="col-2">
-                            <img src="/img/davi.jpg" alt="">
-                        </div>
-            
-                        <div class="col">
-                            <h6>Davi Evangelista</h6>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="col-2 text-end back point">
-                    <p>
-                        47230
-                    </p>
-                </div>
-            </div>
-
-            <div class="row mt-3 car point">
-                <div class="col-1 back  text-center">
-                    <h1>3</h1>
-                </div>
-            
-                <div class="col-9 back point">
-                    <div class="row">
-                        <div class="col-2">
-                            <img src="/img/vick.jpg" alt="">
-                        </div>
-            
-                        <div class="col">
-                            <h6> Victoria Prandi</h6>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="col-2 text-end back point">
-                    <p>
-                        35230
-                    </p>
-                </div>
-            </div>
-
-            <div class="row mt-3 car point mb-5">
-                <div class="col-1 back  text-center">
-                    <h1>4</h1>
-                </div>
-            
-                <div class="col-9 back point ">
-                    <div class="row">
-                        <div class="col-2">
-                            <img src="/img/paula.png" alt="">
-                        </div>
-            
-                        <div class="col">
-                            <h6>Paula Cardoso</h6>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="col-2 text-end back point ">
-                    <p>
-                        20230
-                    </p>
-                </div>
-            </div>
-
-
         </div>
     </div>
 
-    </section>
-        
+    <main class="location">
+        <div class="container text-center parent">
 
-    <footer class="mt-5 ">
+            <div class="row">
+
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/fortaleza.png" alt="Imagem de fortaleza">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/florianopolis.png" alt="Imagem de florianopolis">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/portoAlegre.png" alt="Imagem de portoAlegre">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/salvador.png" alt="Imagem de salvador">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/saopaulo.png" alt="Imagem de saopaulo">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/madri.png" alt="Imagem de madri">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/cartagena.png" alt="Imagem de cartagena">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/newyork.png" alt="Imagem de newyork">
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+    </main>
+
+    <footer class="mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="nav text-center ">
+                    <div class="nav text-center nav">
                         <h6>Brackets</h6>
                         <p>Todos os direitos reservados ©2021</p>
                     </div>
@@ -326,10 +257,10 @@
         </div>
     </footer>
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+        </script>
+
 </body>
 
 </html>
