--- a/components/location2.html
+++ b/components/location2.html
@@ -1,39 +1,201 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="imagem/png" href="/img/logo.png">
+    <link rel="preconnect" href="https://cdn2.civitatis.com">
+    <title>Madrid - Guia de viagem e turismo em Madrid</title>
+    <meta name="title" content="Madrid - Guia de viagem e turismo em Madrid" />
+    <meta name="description"
+        content="Guia de Madrid com toda a informação necessária para viajar a Madrid. Saiba tudo que você precisa para visitar e curtir a capital da Espanha." />
+    <meta name="keywords"
+        content="madrid, turismo madrid, dicas de madrid, madri, dicas de madri, guia de madrid, tudo sobre madrid, viagem madrid" />
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rev="made" rel="author" href="mailto:" />
+    <meta name="revisit-after" content="30" />
+    <meta name="robots" content="all" />
+    <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="theme-color" content="#F2994A">
+    <meta name="p:domain_verify" content="c7f46053b0b7b48b381542ef63ebe44e" />
+    <meta name="pinterest-rich-pin" content="false" />
+    <link rel="preload" href="https://cdn2.civitatis.com/fonts/civitatis-new-icons.woff2" as="font" type="font/woff2"
+        crossorigin />
+    <link rel="preload" href="https://cdn2.civitatis.com/fonts/montserrat-regular-webfont.woff2" as="font"
+        type="font/woff2" crossorigin />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/style/style.css">
+    <script type="text/javascript" charset="UTF-8"
+        src="https://cdn2.civitatis.com/js/vendor/jquery-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
+    <script defer type="text/javascript" charset="UTF-8"
+        src="https://cdn2.civitatis.com/js/vendor/civitatisGuidesCommonVendor-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
 
-    <title>Localidades</title>
-</head>
+    <script id="owl-carousel-vendor-script" defer type="text/javascript"
+        src="https://cdn2.civitatis.com/js/vendor/civCarVendor-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
+    <script id="slider-helper-script" defer type="text/javascript" charset="UTF-8"
+        src="https://cdn2.civitatis.com/js/ext/sliderGuides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
 
-<body>
+    <script defer type="text/javascript" charset="UTF-8"
+        src="https://cdn2.civitatis.com/js/civReactWeb-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
 
-    <main class="location2">
-        <div class="parent">
-            <div class="box w-25">
-                <img src="/img/madri.png" alt="Imagem de madri">
+    <script defer type="text/javascript" charset="UTF-8"
+        src="https://cdn2.civitatis.com/js/errorHandler-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"></script>
+    <script defer type="text/javascript" charset="UTF-8"
+        src="https://cdn2.civitatis.com/js/performanceHandler-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
+    <script defer type="text/javascript" charset="UTF-8" id="utils-helper-script"
+        src="https://cdn2.civitatis.com/js/ext/UtilsHelperGuides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
+    <script defer type="text/javascript" charset="UTF-8"
+        src="https://cdn2.civitatis.com/js/ext/commonGuides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
+    <script defer type="text/javascript"
+        src="https://cdn2.civitatis.com/js/guides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
+        crossorigin="anonymous"></script>
+
+
+    <style>
+        @font-face {
+            font-family: 'montserrat';
+            src: url('https://cdn2.civitatis.com/fonts/montserrat-light-webfont.woff2') format('woff2'),
+                url('https://cdn2.civitatis.com/fonts/montserrat-light-webfont.woff') format('woff');
+            font-weight: 200;
+            font-style: normal;
+        }
+
+        body {
+            font-family: montserrat, arial, sans-serif;
+            font-weight: 200;
+        }
+    </style>
+
+
+
+    <link href="https://cdn2.civitatis.com/css/guidesVendor-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
+        rel="stylesheet">
+    <link href="https://cdn2.civitatis.com/css/guidesAbove-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn2.civitatis.com/css/civNew-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
+        media="all" />
+
+    <link href="https://cdn2.civitatis.com/css/madrid-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
+        rel="stylesheet">
+
+<body class="js-booking-ok  guide-home --price-medium _price-BRL is-guide --home  --old-design">
+
+    <main id="civ-main-element">
+        <header class="o-home-header">
+            <div class="o-home-header__img">
+                <picture>
+                    <img src="/img/Madri-Barcelona.jpg" alt="Imagem de Madrid" />
+                </picture>
             </div>
 
-            <div class="box" style="background-color: aqua;">
-                <p>Viaje para Madri, coneheça as melhores localizações na cidade, tenha sua viagem com o melhor roteiro
-                </p>
+            <div class="o-home-header__content l-guide-section__inner">
+                <h1 class="o-home-header__title --madrid">Madrid - Espanha</h1>
             </div>
-        </div>
+            <div class="a-link-to-content-wrapper">
+                <a class="a-link-to-content js-link-to" href="#home-guide-toc" title="ir ao conteúdo">ir ao conteúdo</a>
+            </div>
+        </header>
+
+        <section class="l-guide-section with-image" id="home-main-section">
+            <div class="l-guide-section__inner">
+                <div class="o-content _regular-content">
+                    <p>Você vai<strong> viajar a Madrid</strong>? Planeje sua viagem com a Brackets, nós te auxiliamos
+                        em todas as etapas, preços das
+                        diferentes atrações turísticas ou sobre como se locomover. Conheça o nosso <strong>guia de
+                            Madrid</strong>, escrito por viajantes para viajantes e que ajudará a organizar sua viagem.
+                    </p>
+
+                </div>
+
+                <div class="o-content _regular-content">
+                    <h2>Por que visitar Madrid?</h2>
+
+                    <p>Madrid é a <strong>capital da Espanha</strong>, assim como a cidade espanhola que mais visitantes
+                        atrai, com <strong>mais de 10 milhões de visitantes em 2019</strong>, sendo uma das mais
+                        populares da Europa.</p>
+
+                    <p>O motivo pelo qual o número de visitantes em Madrid aumenta a cada ano é a perfeita combinação de
+                        <strong>oferta cultural, monumental e de lazer</strong>. Passeando por Madrid, você poderá
+                        sentir a pura essência espanhola, presente nos seus edifícios cheios de elegância, na vida
+                        animada de suas praças e na <a href="/onde-comer" title="Onde comer em Madrid">gastronomia</a>
+                        que encanta. Você ainda não provou os aperitivos típicos espanhóis, conhecidos como tapas?
+                    </p>
+
+                    <p><strong>Madrid respira arte em cada esquina</strong>. Os museus da capital abrigam autênticas
+                        joias assinadas pelos pintores e escultores mais influentes da história da arte. O <a
+                            href="/museu-prado" title="Museu do Prado">Museu do Prado</a>, o <a
+                            href="/museu-reina-sofia" title="Museu Reina Sofía">Reina Sofía</a> e o <a
+                            href="/museu-thyssen-bornemisza" title="Museu Thyssen-Bornemisza">Thyssen</a> formam um
+                        triângulo perfeito para dar asas aos sentidos e conhecer o melhor da <strong>arte espanhola e
+                            internacional</strong>.</p>
+
+                    <h2>Por onde começar?</h2>
+
+                    <p>Depois de escolher as datas, o mais importante é estabelecer <a href="/como-chegar"
+                            title="Como chegar a Madrid">como chegar</a> à cidade, escolher o <a href="/hoteis"
+                            title="Hotéis em Madrid">hotel</a> e conferir o transporte público para saber como ir aos <a
+                            href="/o-que-ver" title="O que ver em Madrid">pontos turísticos</a>.</p>
+
+                    <p>Depois disso, por que não começar conhecendo a <a href="/historia"
+                            title="História de Madrid">história de Madrid</a>? Chamada de "Vila e Corte", a histórica
+                        capital foi uma testemunha fiel da passagem de dinastias, conflitos, guerras e diversos
+                        episódios que ficaram retratados nas ruas de Madrid. O que você está esperando para conhecê-los?
+                    </p>
+
+                    <p>Além disso, a cidade conta com um lugar encantador em qualquer estação: o <a href="/retiro"
+                            title="Parque do Retiro">Parque do Retiro</a>. O pulmão de Madrid por excelência mantém seu
+                        particular encanto intacto o ano inteiro e já se tornou uma <a href="/top-10"
+                            title="Top 10 de Madrid">visita imprescindível na capital</a>.</p>
+
+                    <h2>Ainda não tem hotel?</h2>
+
+                    <p>Em <a href="/hoteis" title="Hotéis em Madrid">nosso buscador</a>, você poderá encontrar<strong>
+                            incríveis ofertas em hotéis de todas as categorias</strong>. Os descontos podem chegar a 75%
+                        e o melhor preço é garantido.</p>
+
+                    <p><a href="/hoteis" title="Hotéis em Madrid">Hotéis em Madrid</a> – Reserve online com preço mínimo
+                        garantido.</p>
+
+                </div>
+            </div>
+        </section>
+
+
+        <section class="l-guide-section --full-for-medium-down">
+            <div class="l-guide-section__inner">
+
+                <header>
+                    <h2 class="a-title-guide-section">Dicas da comunidade</h2>
+                </header>
+
+                <ul class="m-list-que-hacer for-country hide-for-small-only">
+                    <li><span class="a-text--banner">Comentários de outros viajantes</span></li>
+                </ul>
+
+
+
+            </div>
+        </section>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-        </script>
+
+    <link rel="stylesheet"
+        href="https://cdn2.civitatis.com/css/guidesCommonBelow-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
+        media="all" />
+    <link href="https://cdn2.civitatis.com/css/guides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
+        rel="stylesheet">
+    <link href="https://cdn2.civitatis.com/css/civPrintWeb-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
+        rel="stylesheet" media="print">
 
 </body>
 
