--- a/components/results.html
+++ b/components/results.html
@@ -258,6 +258,33 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col orang">
+                <h5>
+                    BURCAR VOOS
+            
+                </h5>
+            </div>
+            <div class="col orang">
+                <h5>
+                   FAZER RESERVAS DE HOTÉIS
+
+                </h5>
+            </div>
+            <div class="col orang">
+                <h5>
+                   ALUGAR CARRO PARTICULAR
+                </h5>
+            </div>
+            <div class="col orang">
+                <h5>
+                   PONTOS UBER
+                </h5>
+            </div>
+        </div>
+    </div>
+
     <section class="bg-test">
         <div class="container mt-5">
             <div class="row">
