--- a/style/style.css
+++ b/style/style.css
@@ -229,6 +229,13 @@ body {
     font-size: 45px;
 }
 
+.orang h5 {
+    color: #F2994A;
+    font-size: 45px;
+}
+
+
+
 /* ANIMATION */
 
 @keyframes go-back {
