--- a/components/location2.html
+++ b/components/location2.html
@@ -5,6 +5,7 @@
 
     <link rel="preconnect" href="https://cdn2.civitatis.com">
     <title>Madrid - Guia de viagem e turismo em Madrid</title>
+
     <meta name="title" content="Madrid - Guia de viagem e turismo em Madrid" />
     <meta name="description"
         content="Guia de Madrid com toda a informação necessária para viajar a Madrid. Saiba tudo que você precisa para visitar e curtir a capital da Espanha." />
@@ -18,47 +19,8 @@
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+
     <meta name="theme-color" content="#F2994A">
-    <meta name="p:domain_verify" content="c7f46053b0b7b48b381542ef63ebe44e" />
-    <meta name="pinterest-rich-pin" content="false" />
-    <link rel="preload" href="https://cdn2.civitatis.com/fonts/civitatis-new-icons.woff2" as="font" type="font/woff2"
-        crossorigin />
-    <link rel="preload" href="https://cdn2.civitatis.com/fonts/montserrat-regular-webfont.woff2" as="font"
-        type="font/woff2" crossorigin />
-
-
-    <script type="text/javascript" charset="UTF-8"
-        src="https://cdn2.civitatis.com/js/vendor/jquery-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
-    <script defer type="text/javascript" charset="UTF-8"
-        src="https://cdn2.civitatis.com/js/vendor/civitatisGuidesCommonVendor-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
-
-    <script id="owl-carousel-vendor-script" defer type="text/javascript"
-        src="https://cdn2.civitatis.com/js/vendor/civCarVendor-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
-    <script id="slider-helper-script" defer type="text/javascript" charset="UTF-8"
-        src="https://cdn2.civitatis.com/js/ext/sliderGuides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
-
-    <script defer type="text/javascript" charset="UTF-8"
-        src="https://cdn2.civitatis.com/js/civReactWeb-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
-
-    <script defer type="text/javascript" charset="UTF-8"
-        src="https://cdn2.civitatis.com/js/errorHandler-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"></script>
-    <script defer type="text/javascript" charset="UTF-8"
-        src="https://cdn2.civitatis.com/js/performanceHandler-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
-    <script defer type="text/javascript" charset="UTF-8" id="utils-helper-script"
-        src="https://cdn2.civitatis.com/js/ext/UtilsHelperGuides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
-    <script defer type="text/javascript" charset="UTF-8"
-        src="https://cdn2.civitatis.com/js/ext/commonGuides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
-    <script defer type="text/javascript"
-        src="https://cdn2.civitatis.com/js/guides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.js"
-        crossorigin="anonymous"></script>
 
 
     <style>
@@ -77,7 +39,6 @@
     </style>
 
 
-
     <link href="https://cdn2.civitatis.com/css/guidesVendor-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
         rel="stylesheet">
     <link href="https://cdn2.civitatis.com/css/guidesAbove-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
@@ -87,6 +48,15 @@
 
     <link href="https://cdn2.civitatis.com/css/madrid-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
         rel="stylesheet">
+
+    <link rel="icon" type="imagem/png" href="/img/logo.png">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/style/style.css">
+
+</head>
 
 <body class="js-booking-ok  guide-home --price-medium _price-BRL is-guide --home  --old-design">
 
@@ -182,20 +152,54 @@
                     <li><span class="a-text--banner">Comentários de outros viajantes</span></li>
                 </ul>
 
-
-
             </div>
+
+
+            <div class="container ">
+                <div class="row">
+                    <div class="col-3">
+
+                    </div>
+
+                    <div class="col-3">
+                        <div class="feed-picture text-end mt-3">
+                            <img src="/img/perfilfundo.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-7 feed-card m-3">
+                        <div class="m-3">
+                            <h4>Gustavo Mendes</h4>
+                            <p>
+                                Pessoal, Gostaria de compartilhar com vocês uma experiência...
+                            </p>
+                            <p>
+                                Já estava sentindo saudade de casa quando encontrei um restaurante incrível com comidas
+                                típicas do Braisil.
+                            </p>
+                            <p>
+                                Pra quem quiser conferir :
+                            </p>
+
+                            <p>
+                                Calle Edgar Neville, 8, 28020 Madrid
+                            </p>
+
+                            <h6 class="link"> #Espanha #Comida #Brasileira</h6>
+                        </div>
+
+
+                        <div class="text-center m-3">
+                            <img src="/img/restaurante.jpg" alt="" class="img-fluid">
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
         </section>
     </main>
-
-
-    <link rel="stylesheet"
-        href="https://cdn2.civitatis.com/css/guidesCommonBelow-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
-        media="all" />
-    <link href="https://cdn2.civitatis.com/css/guides-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
-        rel="stylesheet">
-    <link href="https://cdn2.civitatis.com/css/civPrintWeb-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
-        rel="stylesheet" media="print">
 
 </body>
 
