--- a/components/results.html
+++ b/components/results.html
@@ -260,28 +260,41 @@
 
     <div class="container">
         <div class="row">
+
+            <h1 class="text-center mt-5 mb-5 he">
+                A GENTE TE AJUDA A ECONOMIZAR
+            </h1>
+
             <div class="col orang">
                 <h5>
-                    BURCAR VOOS
+                    BUSQUE VOOS
             
                 </h5>
             </div>
             <div class="col orang">
                 <h5>
-                   FAZER RESERVAS DE HOTÉIS
+                   FAÇA RESERVAS DE HOTÉIS
 
                 </h5>
             </div>
             <div class="col orang">
                 <h5>
-                   ALUGAR CARRO PARTICULAR
+                   ALUGUE CARRO PARTICULAR
                 </h5>
             </div>
-            <div class="col orang">
+            <div class="col orang mb-3 text-center">
                 <h5>
-                   PONTOS UBER
+                   USE PONTOS UBER
                 </h5>
             </div>
+
+
+            <div class="text-center col">
+                
+                <img src="/img/planeja.png" alt="">
+
+            </div>
+
         </div>
     </div>
 
