--- a/components/location2.html
+++ b/components/location2.html
@@ -155,49 +155,70 @@
             </div>
 
 
-            <div class="container ">
-                <div class="row">
-                    <div class="col-3">
-
-                    </div>
-
-                    <div class="col-3">
-                        <div class="feed-picture text-end mt-3">
-                            <img src="/img/perfilfundo.png" alt="">
+            <main class="bg-ranking">
+                <div class="container ">
+                    <div class="row">
+            
+            
+            
+                        <div class="col-3">
+                            <div class="feed-picture text-end mt-3">
+                                <img src="/img/perfilfundo.png" alt="">
+                            </div>
+                        </div>
+            
+                        <div class="col-7 feed-card m-3">
+                            <div class="m-3">
+                                <h4>Gustavo Mendes</h4>
+                                <p>
+                                    Vocês conhecem a dança folclórica flamingo ?
+                                </p>
+                                <p>
+                                    O flamenco é um dos elementos mais característicos da cultura espanhola, especialmente na Baixa Andaluzia, entre as
+                                    províncias de Cádiz e Sevilha, onde surgiu por volta do século XVIII. Ele foi declarado Patrimônio Cultural Imaterial da
+                                    Humanidade pela UNESCO em 2010.
+                                </p>
+                
+            
+                                <h6 class="link"> #Flamingo #Dança </h6>
+                            </div>
+            
+            
+                            <div class="text-center m-3">
+                                <img src="/img/espanha.jpg" alt="" class="img-fluid">
+                            </div>
+            
+                        </div>
+            
+            
+                        <div class="col-3">
+                            <div class="feed-picture text-end mt-3">
+                                <img src="/img/davi.jpg" alt="">
+                            </div>
+                        </div>
+            
+                        <div class="col-7 feed-card m-3">
+                            <div class="m-3">
+                                <h4>Davi Evangelista</h4>
+                                <p>
+                                    A maior produtora de azeite do mundo
+                                </p>
+                                <p>
+                                    Vocês sabiam disso?
+                                </p>
+            
+                                <h6 class="link"> #Espanha #Azeite </h6>
+                            </div>
+            
+            
+                            <div class="text-center m-3">
+                                <img src="/img/espanha2.jpg" alt="" class="img-fluid">
+                            </div>
+            
                         </div>
                     </div>
-
-                    <div class="col-7 feed-card m-3">
-                        <div class="m-3">
-                            <h4>Gustavo Mendes</h4>
-                            <p>
-                                Pessoal, Gostaria de compartilhar com vocês uma experiência...
-                            </p>
-                            <p>
-                                Já estava sentindo saudade de casa quando encontrei um restaurante incrível com comidas
-                                típicas do Braisil.
-                            </p>
-                            <p>
-                                Pra quem quiser conferir :
-                            </p>
-
-                            <p>
-                                Calle Edgar Neville, 8, 28020 Madrid
-                            </p>
-
-                            <h6 class="link"> #Espanha #Comida #Brasileira</h6>
-                        </div>
-
-
-                        <div class="text-center m-3">
-                            <img src="/img/restaurante.jpg" alt="" class="img-fluid">
-                        </div>
-
-                    </div>
-
                 </div>
-            </div>
-
+            </main>
         </section>
     </main>
 
