--- a/style/style.css
+++ b/style/style.css
@@ -226,14 +226,18 @@ body {
 
 .orange {
     color: #F2994A;
-    font-size: 45px;
+
 }
 
 .orang h5 {
     color: #F2994A;
-    font-size: 45px;
+    font-size: 30px;
 }
 
+.he {
+    font-weight: bold;
+    color: #666;
+}
 
 
 /* ANIMATION */
