--- a/components/profile.html
+++ b/components/profile.html
@@ -250,6 +250,10 @@
                 <div class="col text-center">
                     <h6 > Comunidade</h6>
                 </div>
+
+                <div class="col text-center">
+                    <h6> Post</h6>
+                </div>
             </div>
         </div>
 
