:rotating_light: Ajustando responsividade da tela Results

--- a/components/results.html
+++ b/components/results.html
@@ -288,11 +288,13 @@
                 </h5>
             </div>
 
+        </div>
 
+        <div>
             <div class="text-center col">
-                
-                <img src="/img/planeja.png" alt="">
-
+            
+                <img src="/img/planeja.png" alt="" class="img-fluid">
+            
             </div>
 
         </div>
@@ -303,7 +305,7 @@
             <div class="row">
                 <div class="row mt-5">
                     <h5>PORQUE É NECESSÁRIO DOCUMENTAÇÃO PARA VIAJAR?</h5>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <p class="docume m-5">
                             Esse é um ponto muito importante de ser mencionado aqui. Isso porque a apresentação de documentos para viagem de avião
                             nacional é aceita para quem tenha o nome civil, ou seja, o nome que foi registrado em Cartório no dia do nascimento. Mas
@@ -311,7 +313,7 @@
                         </p>
                     </div>
                     
-                    <div class=" col-6 text-center mb-5">
+                    <div class=" col-md-6 text-center mb-5">
                         <svg class="animated" id="freepik_stories-personal-files" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500"
                             version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs">
                             
