:bug: Corrigindo responsividade de cards

--- a/components/feed.html
+++ b/components/feed.html
@@ -230,7 +230,7 @@
 
                 <div class="col-3">
                     <div class="feed-picture text-end mt-3">
-                        <img src="/img/perfilfundo.png" alt="">
+                        <img src="/img/perfilfundo.png" alt="" class="img-fluid">
                     </div>
                 </div>
 
@@ -265,7 +265,7 @@
 
                 <div class="col-3">
                     <div class="feed-picture text-end mt-3">
-                        <img src="/img/davi.jpg" alt="">
+                        <img src="/img/davi.jpg" alt="" class="img=fluid">
                     </div>
                 </div>
 
